# data-structure

./: README.md
c/: CMakeLists.txt  README.md
c/include/linked-list/double-linked-list/: double-linked-list.h
c/include/linked-list/single-linked-list/: single-linked-list.h
c/include/queue/array-queue/: array-queue.h
c/include/queue/list-queue/: list-queue.h
c/include/stack/array-stack/: array-stack.h
c/include/stack/list-stack/: list-stack.h
c/src/linked-list/double-linked-list/: double-linked-list.c  main.c
c/src/linked-list/single-linked-list/: main.c  single-linked-list.c
c/src/queue/array-queue/: array-queue.c  main.c
c/src/queue/list-queue/: list-queue.c  main.c
c/src/stack/array-stack/: array-stack.c  main.c
c/src/stack/list-stack/: list-stack.c  main.c
